2015-03-04  Marco "Banshee" Zavagno <itsme@ilbanshee.net>
 * Initial code release with main.c acting as usage demo and test-suite