@@ -7,9 +7,15 @@ typedef struct heap {
   int size;
 } heap_t;
 
-void insert(heap_t* h, int value);
-int pop_min(heap_t* h);
-int pop_max(heap_t* h);
-void dump(heap_t* h);
+heap_t* mmh_init();
+heap_t* mmh_init_with_size(int size);
+void mmh_free(heap_t* h);
+
+void mmh_dump(heap_t* h);
+void mmh_insert(heap_t* h, int value);
+int mmh_pop_min(heap_t* h);
+int mmh_pop_max(heap_t* h);
+int mmh_peek_min(heap_t* h);
+int mmh_peek_max(heap_t* h);
 
 #endif  // MINMAX_HEAP_H_
